// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`removeEmpty should remove empty from array 1`] = `
[
  1,
  2,
  3,
  4,
  {},
  {
    "a": 1,
    "b": 2,
    "f": {},
    "g": {
      "a": 1,
      "b": {},
      "h": [],
    },
  },
  [
    1,
    2,
    3,
    4,
    {},
    {
      "a": 1,
      "b": {},
    },
  ],
]
`;

exports[`removeEmpty should remove empty from object 1`] = `
{
  "a": 1,
  "b": 2,
  "f": {},
  "g": {
    "a": 1,
    "b": {},
  },
  "h": [
    1,
    2,
    3,
    4,
    {},
    {
      "a": 1,
      "b": {},
    },
    [
      1,
      2,
      3,
      4,
      {},
      {
        "a": 1,
        "b": {},
        "h": [],
      },
    ],
  ],
}
`;
